# souitest

./: .gitattributes  Build.bat  CMakeLists.txt  souitest.pro  souitest.vcproj
